# rust_iced_exercise

./: README.md
001_tutorial_iced_GUI/: README.md
001_tutorial_iced_GUI/001_concept_theme/: README.md
001_tutorial_iced_GUI/001_concept_theme/a01_calc/: Cargo.toml  README.md
001_tutorial_iced_GUI/a01_hello_world/: Cargo.toml
001_tutorial_iced_GUI/a02_calculator/: Cargo.toml
001_tutorial_iced_GUI/a02_calculator/src/: main.rs
001_tutorial_iced_GUI/a03_calculator_row_columns/: Cargo.toml
001_tutorial_iced_GUI/a03_calculator_row_columns/src/: main.rs
001_tutorial_iced_GUI/a04_calculator_row_columns_part2/: Cargo.toml
002_small_project_iced_GUI/: README.md
WASM_exercise/: README.md
WASM_exercise/a01_wasm_subscription/: Cargo.toml  index.html
exercise/: README.md
exercise/basic-calculator-rust/: README.md
exercise/calculator_final/: Cargo.toml  README.md
exercise/calculator_final_gemini_2_5_test/: Cargo.toml
exercise/calculator_final_ver2/: Cargo.toml
exercise/checkbox/: Cargo.toml
exercise/clock_iced/: Cargo.toml
exercise/counter/: Cargo.toml
exercise/counter/iced_test/: Cargo.toml
exercise/counter/iced_test/src/: lib.rs
exercise/custom_widget/: Cargo.toml
exercise/hello_iced/: Cargo.toml
exercise/stopwatch/: Cargo.toml  rust-toolchain.toml
exercise/todo_list_divided_conquer_final/: Cargo.toml  README.md
exercise/todo_list_mercury_coder_test/: Cargo.toml  README.md
exercise/todo_list_mercury_coder_test03/: Cargo.toml
exercise/todo_rust_iced_rust2024_rust1_85ver/: Cargo.toml
exercise/todo_rust_iced_rust2024_rust1_85ver/crates/core/: Cargo.toml
helloworld_iced/hello_iced/: Cargo.toml
iced/runtime/: README.md
(+24 files in other folders)
