[package]
name = "iced_core"
description = "The essential ideas of iced"


[features]
auto-detect-theme = ["dep:dark-light"]
advanced = []

[dependencies]
bitflags = "2.0"
bytes = "1.6"
glam = "0.25"
log = "0.4"
num-traits = "0.2"
once_cell = "1.0"
palette = "0.7"
rustc-hash = "2.0"
smol_str = "0.2"
thiserror = "1.0"
wasm-timer = "0.2"
dark-light = "1.0"
# dark-light.optional = true

[dev-dependencies]
approx = "0.5"


